--- a/output/controlsets.tex
+++ b/output/controlsets.tex
@@ -18,6 +18,6 @@ Cohort 				& Mother is employed		& \\
 \end{tabular}
 \begin{tablenotes}
 \footnotesize
-\item Note: This table lists the variables we permute over when selecting the background variables we control for in our estimations. We use two sets of background variables as controls. The first set is the one that best predicts selection into preschool. We choose the three variables that minimize the Bayesian Information Criterion in a regression of a preschool enrollment indicator on three out of the 17 variables listed listed in Panels (1) and (2) in the table. The second set is the one that best predicts each outcome, using a similar criterion, based on the 14 variables listed in Panel (2) We pool the six controls resulting from these two selection processes.
+\item Note: This table lists the variables we permute over when selecting the background variables we control for in our estimations. We use two sets of background variables as controls. The first set is the one that best predicts selection into preschool. We choose the three variables that minimize the Bayesian Information Criterion in a regression of a preschool enrollment indicator on three out of the 17 variables listed listed in Panels (1) and (2) in the table. The second set of background variables is the one that best predicts each outcome, using a similar criterion, based on the 14 variables listed in Panel (2). We pool the six controls resulting from these two selection processes.
 \end{tablenotes}
 \end{threeparttable}
