--- a/output/abc_compromises.tex
+++ b/output/abc_compromises.tex
@@ -4,32 +4,32 @@
 \label{table:abccompromises}
 \centering
 \footnotesize
-\begin{tabular}{ccccc} \toprule
-Child ID & Initial Assignment & Compromise Description & Data Availability & Methodology Assumption \\ \\ \midrule
-Case A & Treatment & Left the study & None & Missing at random \\
-Case B & Treatment & Left the study & None & Missing at random \\
-Case C & Treatment & Left the study & None & Missing at random \\
-Case D & Treatment & Left the study & None & Missing at random \\ \midrule
-.x    & Control  & Died (age 0), heart disease & Baseline; before dead & Attrition after death \\
-914 & Control  & Died (age 0), heart disease & Baseline; before dead & Attrition after death \\
-74 & Treatment & Died (age 0), SIDS & Baseline; before dead & Attrition after death \\
-99 & Treatment  & Died (age 4), pedestrian accident & Baseline; before dead & Attrition after death \\ \midrule
-900 & Treatment  & Non-compliance  & Baseline; before age 8 & Attrition after age 8  \\
-912 & Treatment  & Non-compliance  & Baseline; before age 8 & Attrition after age 8  \\
-922 & Treatment  & Non-compliance  & Baseline; before age 8 & Attrition after age 8  \\ \midrule
-78  & Control        & Crossover from control to treatment & Baseline; before age 8 & Attrition after age 8  \\ \midrule
-85 & Treatment   & 3 months of treatment &  Baseline; after age 2 & Same as treatment group  \\  
-103 & Treatment &10 months of treatment &  Baseline; after age 2 & Same as treatment group  \\
-108 & Treatment & 6 months of treatment &  Baseline; after age 2 & Same as treatment group  \\ 
-123 & Treatment & 9 months of treatment &  Baseline; after age 2 & Same as treatment group  \\  \midrule
-906 & Control  & Left study at 54 months & Baseline; before 54 months & Attrition after 54 months \\ \midrule
-95   & Treatment       & Developmentally delayed at 6 months & No data after diagnosis & Dropped (non-eligible) \\ 
-124 & Treatment       & Developmentally delayed at 36 months & No data after diagnosis & Dropped (non-eligible) \\ \midrule
- 82 & Control       & Crossover from control to treatment & Baseline, before age 8 & Attrition after age 8 \\ 
- 119 & Control       & Crossover from control to treatment & Baseline, before age 8 & Attrition after age 8   \\ \bottomrule
+\begin{tabular}{cccc} \toprule
+Initial Assignment & Compromise Description & Data Availability & Methodology Assumption \\ \\ \midrule
+Treatment & Left the study & None & Missing at random \\
+Treatment & Left the study & None & Missing at random \\
+Treatment & Left the study & None & Missing at random \\
+Treatment & Left the study & None & Missing at random \\ \midrule
+Control  & Died (age 0), heart disease & Baseline; before dead & Attrition after death \\
+Control  & Died (age 0), heart disease & Baseline; before dead & Attrition after death \\
+Treatment & Died (age 0), SIDS & Baseline; before dead & Attrition after death \\
+Treatment  & Died (age 4), pedestrian accident & Baseline; before dead & Attrition after death \\ \midrule
+Treatment  & Non-compliance  & Baseline; before age 8 & Attrition after age 8  \\
+Treatment  & Non-compliance  & Baseline; before age 8 & Attrition after age 8  \\
+Treatment  & Non-compliance  & Baseline; before age 8 & Attrition after age 8  \\ \midrule
+Control        & Crossover from control to treatment & Baseline; before age 8 & Attrition after age 8  \\ \midrule
+Treatment   & 3 months of treatment &  Baseline; after age 2 & Same as treatment group  \\  
+Treatment &10 months of treatment &  Baseline; after age 2 & Same as treatment group  \\
+Treatment & 6 months of treatment &  Baseline; after age 2 & Same as treatment group  \\ 
+Treatment & 9 months of treatment &  Baseline; after age 2 & Same as treatment group  \\  \midrule
+Control  & Left study at 54 months & Baseline; before 54 months & Attrition after 54 months \\ \midrule
+ Treatment       & Developmentally delayed at 6 months & No data after diagnosis & Dropped (non-eligible) \\ 
+Treatment       & Developmentally delayed at 36 months & No data after diagnosis & Dropped (non-eligible) \\ \midrule
+Control       & Crossover from control to treatment & Baseline, before age 8 & Attrition after age 8 \\ 
+Control       & Crossover from control to treatment & Baseline, before age 8 & Attrition after age 8   \\ \bottomrule
 \end{tabular}
 \begin{tablenotes}
-\item Note: This table describes the various randomization compromises in ABC. For each child, we display: the ID assigned by the program staff, the nature of the compromise, the data available, and the methodological assumption when accounting for non-compliance and program attrition. 
+\item Note: This table describes the various randomization compromises in ABC. For each subject, we display: the nature of the compromise, the available data, and the methodological assumption when accounting for non-compliance and program attrition. 
 \end{tablenotes}
 \end{threeparttable}
 \end{sidewaystable}
