--- a/output/baseline_coh6_care_1.tex
+++ b/output/baseline_coh6_care_1.tex
@@ -4,13 +4,12 @@
 
   \begin{threeparttable}
   \begin{tabular}{cccccccc}
-  \hline\hline
+  \toprule
 
      &  & \scriptsize{Control} & \scriptsize{Treated} & \scriptsize{Control} & \scriptsize{Treated} & \mc{2}{c}{\scriptsize{$p$-value}} \\  
 
     \scriptsize{Variable} & \scriptsize{Age} & \scriptsize{Obs.} & \scriptsize{Obs.} & \scriptsize{Mean} & \scriptsize{Mean} & \scriptsize{Single $H_0$} & \scriptsize{Multiple $H_0$} \\ 
-    \hline  
-
+    \midrule
     \mc{1}{l}{\scriptsize{Male}} & \mc{1}{c}{\scriptsize{0}} & \mc{1}{c}{\scriptsize{16}} & \mc{1}{c}{\scriptsize{12}} & \mc{1}{c}{\scriptsize{0.636}} & \mc{1}{c}{\scriptsize{0.747}} & \mc{1}{c}{\scriptsize{(0.575)}} & \mc{1}{c}{\scriptsize{(0.655)}} \\  
 
     \mc{1}{l}{\scriptsize{Birth Weight}} & \mc{1}{c}{\scriptsize{0}} & \mc{1}{c}{\scriptsize{16}} & \mc{1}{c}{\scriptsize{12}} & \mc{1}{c}{\scriptsize{7.041}} & \mc{1}{c}{\scriptsize{7.208}} & \mc{1}{c}{\scriptsize{(0.675)}} & \mc{1}{c}{\scriptsize{(0.745)}} \\  
@@ -18,7 +17,7 @@
     \mc{1}{l}{\scriptsize{No. Siblings in Household}} & \mc{1}{c}{\scriptsize{0}} & \mc{1}{c}{\scriptsize{16}} & \mc{1}{c}{\scriptsize{12}} & \mc{1}{c}{\scriptsize{0.703}} & \mc{1}{c}{\scriptsize{0.490}} & \mc{1}{c}{\scriptsize{(0.515)}} & \mc{1}{c}{\scriptsize{(0.600)}} \\  
 
     \mc{1}{l}{\scriptsize{Birth Year}} & \mc{1}{c}{\scriptsize{0}} & \mc{1}{c}{\scriptsize{16}} & \mc{1}{c}{\scriptsize{12}} & \mc{1}{c}{\scriptsize{1979}} & \mc{1}{c}{\scriptsize{1979}} & \mc{1}{c}{\scriptsize{(0.420)}} & \mc{1}{c}{\scriptsize{(0.540)}} \\ 
-    \hline  
+    \midrule
 
     \mc{1}{l}{\scriptsize{Mother's Education}} & \mc{1}{c}{\scriptsize{0}} & \mc{1}{c}{\scriptsize{16}} & \mc{1}{c}{\scriptsize{12}} & \mc{1}{c}{\scriptsize{11.268}} & \mc{1}{c}{\scriptsize{10.668}} & \mc{1}{c}{\scriptsize{(0.355)}} & \mc{1}{c}{\scriptsize{(0.493)}} \\  
 
@@ -28,14 +27,14 @@
 
     \mc{1}{l}{\scriptsize{Father at Home}} & \mc{1}{c}{\scriptsize{0}} & \mc{1}{c}{\scriptsize{16}} & \mc{1}{c}{\scriptsize{12}} & \mc{1}{c}{\scriptsize{0.057}} & \mc{1}{c}{\scriptsize{0.177}} & \mc{1}{c}{\scriptsize{(0.380)}} & \mc{1}{c}{\scriptsize{(0.420)}} \\  
 
-  \hline\hline
+  \bottomrule
   \end{tabular}
     \begin{tablenotes}
     \scriptsize
     \item 
     Note: This table shows the balance in observed characteristics between the treatment and control groups at baseline for cohort 6.
     For each characteristic, we present the $p$-value from a single hypothesis test.
-    We also present the $p$-values from multiple testing, where we collectively test the
+    We also present the $p$-values from multiple hypothesis testing, where we collectively test the
     baseline characteristics within the blocks separated by the horizontal line.
     Both $p$-values are two-sided and non-parametric. We construct them 
     based on 200 re-draws of the full sample. The estimates we display are the means of 
