--- a/output/care_compromises.tex
+++ b/output/care_compromises.tex
@@ -4,16 +4,16 @@
 \label{table:care_compromises}
 \centering
 \footnotesize
-\begin{tabular}{ccccc} \toprule
-Child ID & Initial Assignment & Compromise Description & Data Availability & Methodology Assumption \\ \\ \midrule
-310 & Family education & Died (age 0), unknown causes & Baseline & Attrition after dead \\
-301 & Center-based Childcare and Family Education  & Left study at age 5  & Baseline; before age 5 & Attrition after age 5 \\
-910 & Control & Move at 11 months old & Baseline; before 11 months & Attrition after 11 months \\
-142 & Center-based Childcare and Family Education & Move at 5 months old & Baseline; before 5 months & Attrition after 5 months \\
-150 & Center-based Childcare and Family Education & Move at age 5 & Baseline; before age 5 & Attrition after 5 \\ \bottomrule
+\begin{tabular}{cccc} \toprule
+ Initial Assignment & Compromise Description & Data Availability & Methodology Assumption \\ \\ \midrule
+Family education & Died (age 0), unknown causes & Baseline & Attrition after dead \\
+Center-based Childcare and Family Education  & Left study at age 5  & Baseline; before age 5 & Attrition after age 5 \\
+Control & Move at 11 months old & Baseline; before 11 months & Attrition after 11 months \\
+Center-based Childcare and Family Education & Move at 5 months old & Baseline; before 5 months & Attrition after 5 months \\
+Center-based Childcare and Family Education & Move at age 5 & Baseline; before age 5 & Attrition after 5 \\ \bottomrule
 \end{tabular}
 \begin{tablenotes}
-\item Note: This table describes the various randomization compromises in CARE. For each child, we display: the ID assigned by the program staff, the nature of the compromise, the data available, and the methodological assumption when accounting for non-compliance and program attrition. 
+\item Note: This table describes the various randomization compromises in CARE. For each subjects, we display: the nature of the compromise, the available data, and the methodological assumption when accounting for non-compliance and program attrition. 
 \end{tablenotes}
 \end{threeparttable}
 \end{sidewaystable}
